--- a/WinterGameJam2025/Assets/_/Features/Manager/Runtime/Manager.Runtime.asmdef
+++ b/WinterGameJam2025/Assets/_/Features/Manager/Runtime/Manager.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:0c859d0963fcc454baed7e047bb40422",
         "GUID:70ee7783ecf9646f99ae250415f2a80b",
-        "GUID:7a467d89dacd64d72a19e73661f6bfbb"
+        "GUID:7a467d89dacd64d72a19e73661f6bfbb",
+        "GUID:31e48787bc0904110bdf5f49ec673301"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
