created dialog view script for text loading

--- a/WinterGameJam2025/Assets/_/Features/Manager/Runtime/Manager.Runtime.asmdef
+++ b/WinterGameJam2025/Assets/_/Features/Manager/Runtime/Manager.Runtime.asmdef
@@ -5,7 +5,8 @@
         "GUID:0c859d0963fcc454baed7e047bb40422",
         "GUID:70ee7783ecf9646f99ae250415f2a80b",
         "GUID:7a467d89dacd64d72a19e73661f6bfbb",
-        "GUID:31e48787bc0904110bdf5f49ec673301"
+        "GUID:31e48787bc0904110bdf5f49ec673301",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
